<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context="com.babymanager.babymanager.Activity.MeasureActivity">
    <RelativeLayout
        android:id="@+id/layout_ads"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true" />
    <RelativeLayout
        android:layout_above="@id/layout_ads"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            app:cardElevation="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_action_back" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp"
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/height_weight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/card_view"
            android:id="@+id/icon_measure"
            android:src="@drawable/can"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp" />

        <TextView

            android:id="@+id/txt_height_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_measure"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center"
            android:text="@string/add_height_weight"
            android:textColor="@color/color_font_button"
            android:textSize="@dimen/_18sdp" />
        <LinearLayout
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical"
            android:layout_below="@+id/txt_height_weight"
            android:id="@+id/layout_height_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edt_height"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:inputType="number" />
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edt_weight"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:inputType="number|numberDecimal" />
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <info.hoang8f.widget.FButton
            app:shadowHeight="@dimen/_2sdp"
            app:shadowColor="@android:color/darker_gray"
            app:cornerRadius="@dimen/_30sdp"
            app:fButtonColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_below="@+id/layout_height_weight"
            android:text="@string/add_new"
            android:textColor="@color/color_font_button"
            android:id="@+id/btn_height_weight"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</RelativeLayout>