<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_background"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_140sdp"
    android:background="@color/background_navigation"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/_8sdp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/txt_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

</android.support.constraint.ConstraintLayout>
